# Solution-Acceleration-Engine

./: .claudeignore  .clineignore  .clinerules  .env.example  .gitignore  API_PLAYBOOK.md  CLAUDE.md  Dockerfile  Dockerfile.web  LOCAL_SETUP_GUIDE.md  STARTUP.md  alembic.ini  contexta.db  debug_arbitrator.py  docker-compose.yml  entrypoint.sh  list_blueprints.py  package-lock.json  pyproject.toml  rxconfig.py  seed.py  seed_project_node.py  setup_local.sh  supervisord.conf  test_models.py  verify_fix.py
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 5a4be5db9a4c_.py  5d3059d1eb3f_.py  a1b2c3d4e5f6_schema_v6_junction_tables.py
contexta/: __init__.py  __main__.py  config.py
contexta/admin/: __init__.py  blueprint_manager.py  dream_cycle.py
contexta/api/: __init__.py  config.py  config_keys.py  config_store.py  dependencies.py  pipeline_bridge.py  repositories.py  schemas.py
contexta/db/: __init__.py  models.py  repositories.py  schema.py
contexta/export/: __init__.py  deserializer.py  serializer.py
contexta/harness/: __init__.py  activate_blueprint.py  seed_database.py
contexta/knowledge/: __init__.py  memory.py
contexta/llm/: UNIFIED_CLIENT_USAGE.md  __init__.py  client_factory.py  models.py  prompts.py  provider.py
contexta/mcp/: __init__.py  artifact_registry.py  client.py
contexta/models/: __init__.py  citations.py  enums.py  export.py  findings.py  payloads.py  proposal.py
contexta/pipeline/: __init__.py  advisor.py  arbitrator.py  comparison.py  confidence.py  confidence_engine.py  dimension_runner.py  knowledge_memory.py  optimizer.py  proposal.py  proposal_validator.py  scope_policy.py
contexta/services/: __init__.py  arbitration.py
contexta/tui/: __init__.py  app.py  messages.py
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  manifest.json
reflex.lock/: package.json
scripts/: dev-start.sh  healthcheck.sh  init_db.py  test_api_harness.py
simulation/: run_simulation_alpha.py
simulation_output/: run1_arbitration.json  run1_audit.json  run1_ingestion.json  run1_learning.json  run1_synthesis.json  run2_arbitration.json  run2_audit.json  run2_ingestion.json  run2_learning.json  run2_synthesis.json  trend_analysis_v1_to_v2.json
test_artifacts/: banking_statement_of_work.md  banking_technical_architecture.md  drone_project_scope_doc.md  drone_resource_plan.md  pharma_non_functional_requirements.md  pharma_proposal_main.md  simulation_alpha_v1.md  simulation_alpha_v2.md
tests/: conftest.py  fixtures.py  test_arbitrator_pipeline.py  test_comparison.py  test_confidence.py  test_confidence_steering.py  test_config.py  test_coverage_gaps.py  test_db.py  test_e2e_integration.py  test_models.py  test_navigate_to_artifact.py  test_optimizer.py  test_pipeline_arbitrator.py  test_property_07_line_count.py  test_property_08_citation_integrity.py  test_property_09_dimension_tasks.py  test_property_10_temperature_zero.py  test_property_11_blueprint_inclusion.py  test_property_12_dimensions_display.py  test_property_13_14_arbitrator.py  test_property_16_advisor.py  test_property_17_scope_policy.py  test_property_18_19_export_import.py  test_property_20_dream_cycle.py  test_property_22_citation_jump.py  test_property_23_batch_commit.py  test_proposal_engine.py  test_review_engine.py  test_schema_migration_v7.py  test_ui_integration.py  test_unified_llm.py
tests/api/: conftest.py  test_admin.py  test_artifacts.py  test_db_path_consistency.py  test_error_contract.py  test_projects.py  test_proposals.py  test_review_snapshots.py  test_reviews.py  (+1 more)
web/: __init__.py  app.py  state.py  web.py
(+74 files in other folders)
