[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "contexta"
version = "0.1.0"
description = "Project Contexta — deterministic solution validation pipeline"
authors = ["Contexta Contributors"]
readme = "README.md"
packages = [{ include = "contexta" }]

[tool.poetry.dependencies]
python = "^3.11"
textual = ">=0.47.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
aiosqlite = ">=0.19.0"
litellm = ">=1.20.0"
mcp = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"
hypothesis = ">=6.92.0"
pytest-cov = ">=4.1.0"

[tool.poetry.scripts]
contexta = "contexta.__main__:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["contexta"]
omit = ["contexta/__main__.py", "contexta/tui/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
