[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contexta"
version = "0.1.0"
description = "Project Contexta — deterministic solution validation pipeline"
requires-python = ">=3.11,<3.13"
dependencies = [
    "textual>=0.47.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "litellm>=1.20.0",
    "mcp>=1.0.0",
    "reflex>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.92.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
contexta = "contexta.__main__:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.hatch.build.targets.wheel]
packages = ["contexta"]

[tool.coverage.run]
source = ["contexta"]
omit = ["contexta/__main__.py", "contexta/tui/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
